--- a/Mokepon/styles.css
+++ b/Mokepon/styles.css
@@ -51,9 +51,9 @@ body {
     margin-top: 30px ;
     font-family: 'Poppins', sans-serif;
 }
-input {
+/* input {
     display: none;
-}
+} */
 input:checked + label {
     background: darksalmon;
 }
