--- a/Mokepon-canvas/styles.css
+++ b/Mokepon-canvas/styles.css
@@ -110,12 +110,33 @@ input:checked + label {
     justify-content: center;
 }
 
-#map {
+#mokepon-map button {
+    /* display: block; */
+    width: 80px;
+    height: 40px;
+    border-radius: 20px;
+    background: transparent;
     border: 2px solid white;
+    color: white;
+    margin: 5px 0;
+    font-family: 'Poppins', sans-serif;
 }
 
-@media (max-width: 360px) {
+#map {
+
+}
+
+@media (max-width: 560px) {
     .cards, .card-attacks  {
+        flex-direction: column;
+    }
+   
+}
+
+@media (max-width: 300px) {
+    #mokepon-map div {
+        display: flex;
+        align-items: center;
         flex-direction: column;
     }
    
